--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="render\drawable.cpp" />
     <ClCompile Include="render\shaderprogram.cpp" />
     <ClCompile Include="render\shape\cube.cpp" />
+    <ClCompile Include="render\shape\torus.cpp" />
     <ClCompile Include="test\core\test_channel.cpp" />
     <ClCompile Include="test\core\test_logger.cpp" />
     <ClCompile Include="test\input\test_joy_recv.cpp" />
@@ -130,13 +131,16 @@
     <ClInclude Include="input\joystick.h" />
     <ClInclude Include="input\keyboard.h" />
     <ClInclude Include="input\mouse.h" />
+    <ClInclude Include="math\constants.h" />
     <ClInclude Include="math\conversions.h" />
     <ClInclude Include="math\frustum.h" />
+    <ClInclude Include="math\util.h" />
     <ClInclude Include="opengl.h" />
     <ClInclude Include="preprocessor.h" />
     <ClInclude Include="render\drawable.h" />
     <ClInclude Include="render\shaderprogram.h" />
     <ClInclude Include="render\shape\cube.h" />
+    <ClInclude Include="render\shape\torus.h" />
     <ClInclude Include="test\core\core_test.h" />
     <ClInclude Include="test\input\input_test.h" />
     <ClInclude Include="test\test.h" />
