--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.;../dependencies/include;F:\SDK\boost_1_55_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../dependencies/include;C:\SDK\boost_1_56_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -72,7 +72,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>.;../dependencies/include;F:\SDK\boost_1_55_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../dependencies/include;C:\SDK\boost_1_56_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -85,6 +85,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="app\application.cpp" />
+    <ClCompile Include="app\cameratest.cpp" />
     <ClCompile Include="app\spinningcube.cpp" />
     <ClCompile Include="core\config.cpp" />
     <ClCompile Include="core\engine.cpp" />
@@ -98,7 +99,9 @@
     <ClCompile Include="input\keyboard.cpp" />
     <ClCompile Include="input\mouse.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="math\aabb.cpp" />
     <ClCompile Include="render\camera\cameraBase.cpp" />
+    <ClCompile Include="render\camera\freeCamera.cpp" />
     <ClCompile Include="render\drawable.cpp" />
     <ClCompile Include="render\glinfo.cpp" />
     <ClCompile Include="render\shaderprogram.cpp" />
@@ -112,6 +115,7 @@
     <ClCompile Include="test\input\test_key_recv.cpp" />
     <ClCompile Include="test\input\test_mouse_recv.cpp" />
     <ClCompile Include="test\util\test_named.cpp" />
+    <ClCompile Include="util\color.cpp" />
     <ClCompile Include="util\named.cpp" />
     <ClCompile Include="util\timer.cpp" />
     <ClCompile Include="video\monitor.cpp" />
@@ -120,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app\application.h" />
+    <ClInclude Include="app\cameratest.h" />
     <ClInclude Include="app\spinningcube.h" />
     <ClInclude Include="core\channel.h" />
     <ClInclude Include="core\channelQueue.h" />
@@ -134,9 +139,11 @@
     <ClInclude Include="input\joystick.h" />
     <ClInclude Include="input\keyboard.h" />
     <ClInclude Include="input\mouse.h" />
+    <ClInclude Include="math\aabb.h" />
     <ClInclude Include="math\constants.h" />
     <ClInclude Include="math\conversions.h" />
     <ClInclude Include="math\frustum.h" />
+    <ClInclude Include="math\plane.h" />
     <ClInclude Include="math\util.h" />
     <ClInclude Include="opengl.h" />
     <ClInclude Include="preprocessor.h" />
@@ -154,6 +161,7 @@
     <ClInclude Include="test\test.h" />
     <ClInclude Include="test\util\util_test.h" />
     <ClInclude Include="util\checkRange.h" />
+    <ClInclude Include="util\color.h" />
     <ClInclude Include="util\concurrent_queue.h" />
     <ClInclude Include="util\concurrent_vector.h" />
     <ClInclude Include="util\move_on_copy.h" />
