--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -85,6 +85,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="app\application.cpp" />
+    <ClCompile Include="app\spinningcube.cpp" />
     <ClCompile Include="core\config.cpp" />
     <ClCompile Include="core\engine.cpp" />
     <ClCompile Include="core\logger.cpp" />
@@ -97,12 +98,15 @@
     <ClCompile Include="input\keyboard.cpp" />
     <ClCompile Include="input\mouse.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="render\shader.cpp" />
+    <ClCompile Include="render\shaderprogram.cpp" />
     <ClCompile Include="test\core\test_channel.cpp" />
     <ClCompile Include="test\core\test_logger.cpp" />
     <ClCompile Include="test\input\test_joy_recv.cpp" />
     <ClCompile Include="test\input\test_key_recv.cpp" />
     <ClCompile Include="test\input\test_mouse_recv.cpp" />
     <ClCompile Include="test\util\test_named.cpp" />
+    <ClCompile Include="util\checkGL.cpp" />
     <ClCompile Include="util\named.cpp" />
     <ClCompile Include="video\monitor.cpp" />
     <ClCompile Include="video\video.cpp" />
@@ -110,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app\application.h" />
+    <ClInclude Include="app\spinningcube.h" />
     <ClInclude Include="core\channel.h" />
     <ClInclude Include="core\channelQueue.h" />
     <ClInclude Include="core\config.h" />
@@ -123,12 +128,17 @@
     <ClInclude Include="input\joystick.h" />
     <ClInclude Include="input\keyboard.h" />
     <ClInclude Include="input\mouse.h" />
+    <ClInclude Include="math\conversions.h" />
     <ClInclude Include="opengl.h" />
     <ClInclude Include="preprocessor.h" />
+    <ClInclude Include="render\shader.h" />
+    <ClInclude Include="render\shaderprogram.h" />
+    <ClInclude Include="render\vao.h" />
     <ClInclude Include="test\core\core_test.h" />
     <ClInclude Include="test\input\input_test.h" />
     <ClInclude Include="test\test.h" />
     <ClInclude Include="test\util\util_test.h" />
+    <ClInclude Include="util\checkGL.h" />
     <ClInclude Include="util\checkRange.h" />
     <ClInclude Include="util\concurrent_queue.h" />
     <ClInclude Include="util\concurrent_vector.h" />
