added utilities, basic openGL resource wrapper classes, various checks and fixes added, log version numbers upon startup, customized time formatting string for logging, favored exceptions upon actual errors

--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -100,6 +100,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="render\shader.cpp" />
     <ClCompile Include="render\shaderprogram.cpp" />
+    <ClCompile Include="render\texture.cpp" />
+    <ClCompile Include="render\vertexarray.cpp" />
+    <ClCompile Include="render\vertexbuffer.cpp" />
     <ClCompile Include="test\core\test_channel.cpp" />
     <ClCompile Include="test\core\test_logger.cpp" />
     <ClCompile Include="test\input\test_joy_recv.cpp" />
@@ -107,6 +110,8 @@
     <ClCompile Include="test\input\test_mouse_recv.cpp" />
     <ClCompile Include="test\util\test_named.cpp" />
     <ClCompile Include="util\checkGL.cpp" />
+    <ClCompile Include="util\color.cpp" />
+    <ClCompile Include="util\exception.cpp" />
     <ClCompile Include="util\named.cpp" />
     <ClCompile Include="video\monitor.cpp" />
     <ClCompile Include="video\video.cpp" />
@@ -131,17 +136,24 @@
     <ClInclude Include="math\conversions.h" />
     <ClInclude Include="opengl.h" />
     <ClInclude Include="preprocessor.h" />
+    <ClInclude Include="render\render.h" />
     <ClInclude Include="render\shader.h" />
     <ClInclude Include="render\shaderprogram.h" />
-    <ClInclude Include="render\vao.h" />
+    <ClInclude Include="render\texture.h" />
+    <ClInclude Include="render\vertexarray.h" />
+    <ClInclude Include="render\vertexbuffer.h" />
     <ClInclude Include="test\core\core_test.h" />
     <ClInclude Include="test\input\input_test.h" />
     <ClInclude Include="test\test.h" />
     <ClInclude Include="test\util\util_test.h" />
+    <ClInclude Include="util\bitmap.h" />
     <ClInclude Include="util\checkGL.h" />
     <ClInclude Include="util\checkRange.h" />
+    <ClInclude Include="util\color.h" />
     <ClInclude Include="util\concurrent_queue.h" />
     <ClInclude Include="util\concurrent_vector.h" />
+    <ClInclude Include="util\exception.h" />
+    <ClInclude Include="util\make_iterable.h" />
     <ClInclude Include="util\move_on_copy.h" />
     <ClInclude Include="util\named.h" />
     <ClInclude Include="util\unique_resource.h" />
