--- a/Overdrive/Overdrive.vcxproj.filters
+++ b/Overdrive/Overdrive.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="app\rendertest.cpp">
       <Filter>application</Filter>
     </ClCompile>
+    <ClCompile Include="render\renderbuffer.cpp">
+      <Filter>render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="opengl.h" />
@@ -248,6 +251,9 @@
     </ClInclude>
     <ClInclude Include="app\rendertest.h">
       <Filter>application</Filter>
+    </ClInclude>
+    <ClInclude Include="render\renderbuffer.h">
+      <Filter>render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
