--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="app\application.h" />
     <ClInclude Include="core\channel.h" />
     <ClInclude Include="core\channel_queue.h" />
+    <ClInclude Include="core\clock.h" />
     <ClInclude Include="core\engine.h" />
     <ClInclude Include="core\logger.h" />
     <ClInclude Include="core\log_level.h" />
@@ -37,6 +38,9 @@
     <ClInclude Include="opengl.h" />
     <ClInclude Include="overdrive.h" />
     <ClInclude Include="preprocessor.h" />
+    <ClInclude Include="render\renderdebug.h" />
+    <ClInclude Include="render\renderstate.h" />
+    <ClInclude Include="render\stdafx.h" />
     <ClInclude Include="util\active.h" />
     <ClInclude Include="util\exception.h" />
     <ClInclude Include="util\exception_windows.h" />
@@ -49,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app\application.cpp" />
+    <ClCompile Include="core\clock.cpp" />
     <ClCompile Include="core\engine.cpp" />
     <ClCompile Include="core\logger.cpp" />
     <ClCompile Include="core\log_level.cpp" />
@@ -61,6 +66,12 @@
     <ClCompile Include="input\input_windows.cpp" />
     <ClCompile Include="input\keyboard.cpp" />
     <ClCompile Include="input\mouse.cpp" />
+    <ClCompile Include="render\renderdebug.cpp" />
+    <ClCompile Include="render\renderstate.cpp" />
+    <ClCompile Include="render\stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="util\active.cpp" />
     <ClCompile Include="util\exception.cpp" />
     <ClCompile Include="util\exception_windows.cpp" />
@@ -148,8 +159,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
@@ -160,7 +170,7 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;dbghelp.lib</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
@@ -186,8 +196,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -201,7 +210,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;dbghelp.lib</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
